2007-01-28  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/plugins.c:
	  - Fix a potential double free when unloading scripts which failed to
	    load.  Bug #370770.

2007-01-21  David Trowbridge  <trowbrds@gmail.com>

	* src/common/cfgfiles.c:
	  - Change the default for max_auto_indent from 256 to 175 to be a bit
	    more sensible given average nicknames.  Bug #348543.
	* src/fe-gnome/about.c:
	  - Add a missing comma, which was making me and Daniel Drake show up
	    on the same line.  Bug #399215.

2007-01-19  Michel Dänzer  <daenzer@debian.org>

	* src/fe-gnome/xtext.c:
	  - When the MIT-SHM extension doesn't support shared pixmaps, don't
	    use XShmCreatePixmap but use XShmPutImage instead of XPutImage.
	    Bug #398315.

2007-01-10  Brian Pepple  <bpepple@fedoraproject.org>

	* data/icons/hicolor/48x48/apps/Makefile.am (icondir):
	* data/icons/hicolor/128x128/apps/Makefile.am (icondir):
	  - Install application icon into system hicolor theme. Bug #384160

2007-01-10  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.17svn

==================== 0.16 ====================

2007-01-09  David Trowbridge <trowbrds@gmail.com>

	* plugins/notification/Makefile.am:
	  - Include preferences glade file in EXTRA_DIST

	* help/C/xchat-gnome.xml:
	  - Remove <application> tags from "app" element, since everywhere
	    that needs it already has the tag, and it was causing an xmllint
	    error.

2007-01-09  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump version to 0.16

2006-12-15  Guillaume Desmottes <cass@skynet.be>

	* NEWS:
	  - Add some words in NEWS about our new documentations

2006-12-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/conversation-panel.c: (copy_text):
	  - Set PRIMARY too on CopyLinkAddress. Bug #386766.

2006-12-15  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Fix regressions with autojoin and autoconnect.
	    Bug #385515.
